secondfile/objects/ASE_Billing_Account_Number__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ASE Billing Account Number</relationshipLabel>
        <relationshipName>ASE_Billing_Account_Number</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>TEXT(Account_Name__r.Account_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BAN_CUSCODE__c</fullName>
        <label>BAN CUSCODE #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ban_LATA__c</fullName>
        <formula>Name + TEXT(LATA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ban LATA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICSC_CODE__c</fullName>
        <label>ICSC CODE</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LB02</fullName>
                </value>
                <value>
                    <fullName>MB01</fullName>
                </value>
                <value>
                    <fullName>NB01</fullName>
                </value>
                <value>
                    <fullName>OB01</fullName>
                </value>
                <value>
                    <fullName>WT33</fullName>
                </value>
                <value>
                    <fullName>SW10</fullName>
                </value>
                <value>
                    <fullName>SW20</fullName>
                </value>
                <value>
                    <fullName>SW30</fullName>
                </value>
                <value>
                    <fullName>SW40</fullName>
                </value>
                <value>
                    <fullName>SW50</fullName>
                </value>
                <value>
                    <fullName>SW60</fullName>
                </value>
                <value>
                    <fullName>SW70</fullName>
                </value>
                <value>
                    <fullName>SW80</fullName>
                </value>
                <value>
                    <fullName>SW02</fullName>
                </value>
                <value>
                    <fullName>SW04</fullName>
                </value>
                <value>
                    <fullName>SW06</fullName>
                </value>
                <value>
                    <fullName>SB01</fullName>
                </value>
                <value>
                    <fullName>SB02</fullName>
                </value>
                <value>
                    <fullName>SB03</fullName>
                </value>
                <value>
                    <fullName>SB04</fullName>
                </value>
                <value>
                    <fullName>SC01</fullName>
                </value>
                <value>
                    <fullName>SC02</fullName>
                </value>
                <value>
                    <fullName>SC03</fullName>
                </value>
                <value>
                    <fullName>SC04</fullName>
                </value>
                <value>
                    <fullName>SC05</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LATA__c</fullName>
        <label>LATA</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>320</fullName>
                </value>
                <value>
                    <fullName>322</fullName>
                </value>
                <value>
                    <fullName>324</fullName>
                </value>
                <value>
                    <fullName>325</fullName>
                </value>
                <value>
                    <fullName>326</fullName>
                </value>
                <value>
                    <fullName>328</fullName>
                </value>
                <value>
                    <fullName>330</fullName>
                </value>
                <value>
                    <fullName>332</fullName>
                </value>
                <value>
                    <fullName>334</fullName>
                </value>
                <value>
                    <fullName>336</fullName>
                </value>
                <value>
                    <fullName>338</fullName>
                </value>
                <value>
                    <fullName>340</fullName>
                </value>
                <value>
                    <fullName>342</fullName>
                </value>
                <value>
                    <fullName>344</fullName>
                </value>
                <value>
                    <fullName>346</fullName>
                </value>
                <value>
                    <fullName>348</fullName>
                </value>
                <value>
                    <fullName>350</fullName>
                </value>
                <value>
                    <fullName>352</fullName>
                </value>
                <value>
                    <fullName>354</fullName>
                </value>
                <value>
                    <fullName>356</fullName>
                </value>
                <value>
                    <fullName>358</fullName>
                </value>
                <value>
                    <fullName>360</fullName>
                </value>
                <value>
                    <fullName>362</fullName>
                </value>
                <value>
                    <fullName>364</fullName>
                </value>
                <value>
                    <fullName>366</fullName>
                </value>
                <value>
                    <fullName>368</fullName>
                </value>
                <value>
                    <fullName>370</fullName>
                </value>
                <value>
                    <fullName>374</fullName>
                </value>
                <value>
                    <fullName>376</fullName>
                </value>
                <value>
                    <fullName>420</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>Southwest</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Ohio</fullName>
                </value>
                <value>
                    <fullName>Wisconsin</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kansas City, MO</fullName>
                </value>
                <value>
                    <fullName>St. Louis, MO</fullName>
                </value>
                <value>
                    <fullName>Oklahoma</fullName>
                </value>
                <value>
                    <fullName>Dallas, TX</fullName>
                </value>
                <value>
                    <fullName>Houston, TX</fullName>
                </value>
                <value>
                    <fullName>San Antonio, TX</fullName>
                </value>
                <value>
                    <fullName>California South</fullName>
                </value>
                <value>
                    <fullName>California North</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>North Carolina, South Carolina</fullName>
                </value>
                <value>
                    <fullName>North Florida</fullName>
                </value>
                <value>
                    <fullName>South Florida</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Tennessee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ASE Billing Account Number</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BAN #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ASE Billing Account Number</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>